SFDC Automation/src/objects/FIS_Account__c.object
<CustomObject>
    <description>FIS Accounts at Ryder</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FIS Accounts</relationshipLabel>
        <relationshipName>FIS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1_Line1__c</fullName>
        <label>Address 1 (Line 1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_Line2__c</fullName>
        <label>Address 1 (Line 2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Line1__c</fullName>
        <label>Address 2 (Line 1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Only_Flag__c</fullName>
        <label>Cash Only Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_1__c</fullName>
        <label>City 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_2__c</fullName>
        <label>City 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comdata_Fee__c</fullName>
        <label>Comdata Fee</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Activity__c</fullName>
        <label>Customer Activity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FIS Customer Branch</description>
        <label>Customer Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>FIS Accounts</relationshipLabel>
        <relationshipName>FIS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Number__c</fullName>
        <label>District Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lessee_Number__c</fullName>
        <label>Lessee Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lease__c</fullName>
        <label>National Lease</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Rental_Number__c</fullName>
        <label>National Rental Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Print_Name__c</fullName>
        <label>Print Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_HQ_ID__c</fullName>
        <formula>Customer_Branch__r.Ryder_HQ_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ryder HQ ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Ryder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SIC that Ryder uses to identify the account. Typically used to clarify situations like Splash Transportation that would normally be classified as a transportation company but, since we know they are the transportation subsidiary of Dr. Pepper, we consider it Food &amp; Beverage.</description>
        <label>SIC Code Ryder</label>
        <referenceTo>SIC_Code__c</referenceTo>
        <relationshipLabel>FIS Accounts</relationshipLabel>
        <relationshipName>FIS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_1__c</fullName>
        <label>State 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_2__c</fullName>
        <label>State 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_1__c</fullName>
        <label>Zip 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_2__c</fullName>
        <label>Zip 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_FisAcct_id__c</fullName>
        <externalId>true</externalId>
        <label>ext_FISAcct_id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FIS Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Print_Name__c</columns>
        <columns>Lessee_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>District_Number__c</columns>
        <columns>Customer_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FIS Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FIS Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>